--- a/spottrade/CreateSpotViewController.xib
+++ b/spottrade/CreateSpotViewController.xib
@@ -6,6 +6,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,24 +22,34 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tqF-9a-MBh">
-                    <rect key="frame" x="140" y="91" width="116" height="21"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="marker_black" translatesAutoresizingMaskIntoConstraints="NO" id="tLp-oe-axa">
+                    <rect key="frame" x="16" y="36" width="24" height="24"/>
+                    <color key="tintColor" name="grey600"/>
+                    <constraints>
+                        <constraint firstAttribute="width" secondItem="tLp-oe-axa" secondAttribute="height" multiplier="15:8" constant="-21" id="h1o-8L-P0S"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dEx-Ju-gX8">
+                    <rect key="frame" x="48" y="39" width="63" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="y9b-XQ-1jo">
-                    <rect key="frame" x="0.0" y="44" width="414" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                    <items>
-                        <navigationItem title="Title" id="7Om-Bz-Yea"/>
-                    </items>
-                </navigationBar>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <point key="canvasLocation" x="113.5" y="141.5"/>
+            <constraints>
+                <constraint firstItem="tLp-oe-axa" firstAttribute="leading" secondItem="1Vp-BD-KhT" secondAttribute="leading" constant="16" id="1Ig-Gm-PiC"/>
+                <constraint firstItem="tLp-oe-axa" firstAttribute="top" secondItem="1Vp-BD-KhT" secondAttribute="top" constant="16" id="3ab-yK-u18"/>
+            </constraints>
+            <viewLayoutGuide key="safeArea" id="1Vp-BD-KhT"/>
+            <point key="canvasLocation" x="113" y="141"/>
         </view>
     </objects>
+    <resources>
+        <image name="marker_black" width="24" height="24"/>
+        <namedColor name="grey600">
+            <color red="0.45882352941176469" green="0.45882352941176469" blue="0.45882352941176469" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
